--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/socialite": "^5.21",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.0",
-        "phpoffice/phpword": "^1.4"
+        "phpoffice/phpword": "^1.4",
+        "spatie/laravel-responsecache": "^7.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
