--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,19 @@
 services:
+  # PostgreSQL Database
+  - type: pspg
+    name: pubcite-db
+    plan: starter
+    databaseName: pubcite
+    user: pubcite_user
+
+  # Web Application
   - type: web
     name: pubcite
     env: docker
     plan: starter
     dockerfilePath: ./Dockerfile
     dockerContext: .
+    # Link to database service - this automatically injects DB_* environment variables
     envVars:
       - key: APP_ENV
         value: production
@@ -16,6 +25,28 @@ services:
         value: debug
       - key: DB_CONNECTION
         value: pgsql
+      # Database connection will be automatically set by Render when database is linked
+      # These are fallbacks if database service isn't linked:
+      - key: DB_HOST
+        fromDatabase:
+          name: pubcite-db
+          property: host
+      - key: DB_PORT
+        fromDatabase:
+          name: pubcite-db
+          property: port
+      - key: DB_DATABASE
+        fromDatabase:
+          name: pubcite-db
+          property: database
+      - key: DB_USERNAME
+        fromDatabase:
+          name: pubcite-db
+          property: user
+      - key: DB_PASSWORD
+        fromDatabase:
+          name: pubcite-db
+          property: password
       - key: CACHE_DRIVER
         value: file
       - key: RESPONSE_CACHE_DRIVER
