--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "postinstall": "npm run update-browserslist"
     },
     "devDependencies": {
+        "@alpinejs/focus": "^3.15.2",
         "@tailwindcss/forms": "^0.5.7",
         "@tailwindcss/typography": "^0.5.10",
         "@tailwindcss/vite": "^4.0.0",
