--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/socialite": "^5.21",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.0",
+        "phpoffice/phpspreadsheet": "^5.2",
         "phpoffice/phpword": "^1.4",
         "spatie/laravel-responsecache": "^7.7"
     },
